# neuroboard

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  settings.gradle.kts  start.bat  start.sh
app/: build.gradle.kts
app/src/main/kotlin/neuroboard/: App.kt
app/src/test/kotlin/neuroboard/: AppTest.kt
env/: envs.toml
nbdata/: train-0.ntd
neuroboard/: __init__.py  config.py  p300.py  view.py
neuroboard/neuroplay/model/: neuroplay.py
neuroplay/model/: neuroplay.py
